--- a/src/sass/utils/variables.scss
+++ b/src/sass/utils/variables.scss
@@ -5,6 +5,7 @@ $black: #000000;
 $black2: #3F3F3F;
 $white: #ffffff;
 $gray1: #828282;
+$gray4: #BDBDBD;
 $light-blue-hover: #F0F2F2;
 $divider: #C4C4C4;
 $link: #0F6DB1;
