--- a/src/pages/CabinetPage/CreateOrder/ShippingDetails/ShippingDetails.module.scss
+++ b/src/pages/CabinetPage/CreateOrder/ShippingDetails/ShippingDetails.module.scss
@@ -1,3 +1,4 @@
+@import '../../../../sass/utils/variables.scss';
 .ship {
   &__wrap {
     display: flex;
@@ -26,10 +27,10 @@
   &__label {
     font-size: 16px;
     line-height: 125%;
-    color: #3f3f3f;
+    color: $inactive-color;
   }
   &__required {
-    color: #eb5757;
+    color: $accent-color;
   }
   &__wrapper {
     display: flex;
@@ -44,7 +45,7 @@
     line-height: 125%;
     padding: 0;
     margin: 0;
-    border: 1px solid #c4c4c4;
+    border: 1px solid $outline-color;
     width: 410px;
     padding: 11px 15px;
   }
@@ -54,7 +55,7 @@
   &__text {
     font-size: 14px;
     line-height: 143%;
-    color: #828282;
+    color: $secondary-text-color;
     margin-bottom: 24px;
   }
   &__btns {
@@ -66,38 +67,52 @@
     font-size: 14px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: #fff;
-    background-color: #000000;
+    color: $contrast-text-color;
+    background-color: $main-text-color;
+    border: 1px solid $main-text-color;
     padding: 15px 40px;
     margin-right: 25px;
+    transition: all $st-transition;
+  }
+  &__btn--login:hover {
+    background-color: transparent;
+    color: $main-text-color;
+  }
+  &__btn--next:hover {
+    background-color: transparent;
+    color: $main-text-color;
   }
   &__btn--restore {
     font-size: 14px;
     line-height: 143%;
-    color: #0f6db1;
+    color: $link-color;
     background-color: transparent;
+    transition: all $st-transition;
+  }
+  &__btn--restore:hover {
+    color: #57a4eb;
   }
   &__line {
     height: 1px;
     width: 606px;
     margin-bottom: 39px;
-    background-color: #c4c4c4;
+    background-color: $outline-color;
   }
   &__item {
     display: flex;
     gap: 13px;
     align-items: center;
     padding: 12px 0;
-    border-top: 1px solid #c4c4c4;
+    border-top: 1px solid $outline-color;
     input[type="radio"] {
       margin-right: 16px;
-      accent-color: black;
+      accent-color: $main-text-color;
       width: 10px;
       height: 10px;
     }
   }
   &__item:first-child .ship__rate {
-    color: #000000;
+    color: $main-text-color;
   }
   &__item:last-child {
     width: 443px;
@@ -111,7 +126,7 @@
   .ship__type {
     font-size: 14px;
     line-height: 143%;
-    color: #3f3f3f;
+    color: $inactive-color;
   }
   &__rate {
     margin-right: 107px;
@@ -132,6 +147,10 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     background-color: transparent;
-    // margin-left: 454px;
+    color: $secondary-text-color;
+    transition: all $st-transition;
+  }
+  &__btn--back:hover {
+    color: $main-text-color;
   }
 }
