--- a/src/pages/main-page/blog/blog.module.scss
+++ b/src/pages/main-page/blog/blog.module.scss
@@ -1,5 +1,5 @@
 .blog {
-    width: 1920px;
+    max-width: 100%;
     background: #F8F9FB;
 
 
@@ -19,7 +19,7 @@
 
 
     &__item {
-        width: 447px;
+        width: 434px;
         height: 420px;
         padding: 24px;
         margin-right: 30px;
@@ -59,7 +59,7 @@
 
     &__line_item {
         height: 3px;
-        width: 399px;
+        width: 75%;
         background: #000;
         position: absolute;
         bottom: 40px;
@@ -74,5 +74,68 @@
         line-height: 37px;
         position: absolute;
         bottom: 5px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .blog {
+        width: 1200px;
+
+        &__title {
+            text-align: center;
+        }
+
+        &__list {
+            display: grid;
+            grid-template-columns: repeat(2, 430px);
+            gap: 30px;
+            justify-content: center;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .blog {
+        width: 768px;
+
+        &__list {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        &__item {
+            margin: 0;
+        }
+    }
+}
+
+
+@media screen and (max-width: 480px) {
+    .blog {
+        width: 480px;
+
+        &__list {
+            width: 100%;
+        }
+
+        &__item {
+            width: 100%;
+        }
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .blog {
+        width: 320px;
+
+        &__list {
+            width: 100%;
+        }
+
+        &__item {
+            width: 100%;
+            height: 500px;
+        }
     }
 }
