--- a/src/pages/CabinetPage/CreateOrder/ShippingDetails/ShippingDetails.module.scss
+++ b/src/pages/CabinetPage/CreateOrder/ShippingDetails/ShippingDetails.module.scss
@@ -19,6 +19,7 @@
     font-size: 16px;
     line-height: 125%;
     color: $inactive-color;
+    margin-bottom: 10px;
   }
   &__required {
     color: $accent-color;
@@ -26,6 +27,7 @@
   &__wrapper {
     display: flex;
     flex-direction: column;
+    margin-bottom: 12px;
     .ship__input:not(:last-child) {
       margin-bottom: 13px;
     }
@@ -46,51 +48,105 @@
     margin-bottom: 24px;
   }
   &__btns {
+    display: flex;
+    flex-direction: column;
     margin-bottom: 36px;
+    gap: 15px;
   }
   &__btn--login,
-    &__btn--next {
-      font-weight: 500;
-      font-size: 14px;
-      letter-spacing: 0.04em;
-      text-transform: uppercase;
-      color: $contrast-text-color;
-      background-color: $main-text-color;
-      border: 1px solid $main-text-color;
-      padding: 15px 40px;
-      margin-right: 25px;
-      transition: all $st-transition;
+  &__btn--next {
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: $contrast-text-color;
+    background-color: $main-text-color;
+    border: 1px solid $main-text-color;
+    padding: 15px 40px;
+    transition: all $st-transition;
+  }
+  &__btn--login:hover {
+    background-color: transparent;
+    color: $main-text-color;
+  }
+  &__btn--next:hover {
+    background-color: transparent;
+    color: $main-text-color;
+  }
+  &__btn--restore {
+    font-size: 14px;
+    line-height: 143%;
+    color: $link-color;
+    background-color: transparent;
+    transition: all $st-transition;
+  }
+  &__btn--restore:hover {
+    color: #57a4eb;
+  }
+  &__item {
+    display: flex;
+    gap: 13px;
+    align-items: center;
+    padding: 12px 0;
+    border-top: 1px solid $outline-color;
+    input[type="radio"] {
+      margin-right: 16px;
+      accent-color: $main-text-color;
+      width: 10px;
+      height: 10px;
     }
-    &__btn--login:hover {
-      background-color: transparent;
-      color: $main-text-color;
-    }
-    &__btn--next:hover {
-      background-color: transparent;
-      color: $main-text-color;
-    }
-    &__btn--restore {
-      font-size: 14px;
-      line-height: 143%;
-      color: $link-color;
-      background-color: transparent;
-      transition: all $st-transition;
-    }
-    &__btn--restore:hover {
-      color: #57a4eb;
-    }
+  }
+  &__item:first-child .ship__rate {
+    color: $main-text-color;
+  }
+  &__methods {
+    display: flex;
+    justify-content: space-evenly;
+    float: left;
+    gap: 15px;
+  }
+  &__rate,
+  .ship__type {
+    font-size: 14px;
+    line-height: 143%;
+    color: $inactive-color;
+  }
+  &__rate {
+    width: 58px;
+  }
+  &__type:not(:last-child) {
+    width: 79px;
+  }
+  &__navigation {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 24px;
+  }
+  &__btn--back {
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    background-color: transparent;
+    color: $secondary-text-color;
+    transition: all $st-transition;
+  }
+  &__btn--back:hover {
+    color: $main-text-color;
+  }
 }
 
-@media screen and (min-width: 1920px) {
+@media screen and (min-width: 768px) {
   .ship {
     &__wrap {
       display: flex;
-      justify-content: center;
-      gap: 106px;
+      // gap: 106px;
+      flex-direction: column;
       margin-top: 57px;
     }
     &__form {
       width: 606px;
+      margin: 0 auto;
     }
     &__row {
       align-items: start;
@@ -106,72 +162,33 @@
     &__select {
       width: 410px;
     }
+    &__btns {
+      flex-direction: row;
+      gap: 0;
+    }
+    &__btn--login,
+    &__btn--next {
+      margin-right: 25px;
+    }
     &__select {
       width: 440px;
     }
-
-    
-    
     &__line {
       height: 1px;
       width: 606px;
+      margin: 0 auto;
       margin-bottom: 39px;
       background-color: $outline-color;
     }
-    &__item {
-      display: flex;
-      gap: 13px;
-      align-items: center;
-      padding: 12px 0;
-      border-top: 1px solid $outline-color;
-      input[type="radio"] {
-        margin-right: 16px;
-        accent-color: $main-text-color;
-        width: 10px;
-        height: 10px;
-      }
-    }
-    &__item:first-child .ship__rate {
-      color: $main-text-color;
-    }
+
     &__item:last-child {
       width: 443px;
     }
-    &__methods {
-      display: flex;
-      justify-content: space-evenly;
-      float: left;
-    }
-    &__rate,
-    .ship__type {
-      font-size: 14px;
-      line-height: 143%;
-      color: $inactive-color;
-    }
     &__rate {
       margin-right: 107px;
-      width: 58px;
     }
     &__type:not(:last-child) {
-      width: 79px;
       margin-right: 65px;
-    }
-    &__navigation {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 24px;
-    }
-    &__btn--back {
-      font-weight: 500;
-      font-size: 14px;
-      letter-spacing: 0.04em;
-      text-transform: uppercase;
-      background-color: transparent;
-      color: $secondary-text-color;
-      transition: all $st-transition;
-    }
-    &__btn--back:hover {
-      color: $main-text-color;
     }
   }
 }
