--- a/src/pages/CatalogPage/Filtration/Filtration.scss
+++ b/src/pages/CatalogPage/Filtration/Filtration.scss
@@ -170,41 +170,7 @@
 }
 
 
-#amount,
-#amountLast {
-    text-transform: uppercase;
-    @include typography(Roboto, 400, 14px, 40px, 0, left);
-    color: $main-text-color !important;
-    border: none;
-    background: transparent;
-}
 
-#amountLast {
-    text-align: right;
-}
-
-.ui-slider-range {
-    background: $main-text-color !important;
-    height: 2px !important;
-}
-
-#slider-range {
-    background: $outline-color !important;
-    height: 2px !important;
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-    border-radius: 1px;
-}
-
-
-.ui-state-default {
-    width: 6px !important;
-    height: 16px !important;
-    background: $main-text-color !important;
-    top: -7px !important;
-    border: none !important;
-}
 
 .catalog-filtration__apply {
     text-transform: uppercase;
@@ -217,7 +183,78 @@
     width: 114px;
     height: 40px;
     transition: $st-transition;
-    &:hover{
+
+    &:hover {
         border: 1px solid $secondary-text-color;
     }
+}
+
+.range_container {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: 50px 0 0 25px;
+}
+
+.form_control_container__time__input {
+    border: none;
+    text-transform: uppercase;
+    text-align: right;
+    @include typography(Roboto, 400, 14px, 3, 0, right);
+}
+.control-left-input{
+    text-align: left;
+
+}
+
+.sliders_control {
+    position: relative;
+    min-height: 50px;
+}
+
+.form_control {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    font-size: 24px;
+    color: #635a5a;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    pointer-events: all;
+    width: 6px;
+    height: 20px;
+    background-color: $main-text-color;
+    cursor: pointer;
+}
+
+input[type=range]::-moz-range-thumb {
+    -webkit-appearance: none;
+    pointer-events: all;
+    width: 6px;
+    height: 20px;
+    background-color: $main-text-color;
+    cursor: pointer;
+}
+
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    opacity: 1;
+}
+
+input[type="range"] {
+    -webkit-appearance: none;
+    appearance: none;
+    height: 2px;
+    width: 100%;
+    position: absolute;
+    background-color: $main-text-color;
+    pointer-events: none;
+}
+
+#fromSlider {
+    height: 0;
+    z-index: 1;
 }
