--- a/src/pages/Cabinet/DashboardPage/AddNewAddress/AddNewAddress.module.scss
+++ b/src/pages/Cabinet/DashboardPage/AddNewAddress/AddNewAddress.module.scss
@@ -2,40 +2,52 @@
 
 .address {
     background-color: $bg-color;
-    padding: 13px 0 67px;
+    padding-bottom: 35px;
+
+    @media screen and (min-width:1200px) {
+        padding: 13px 0 67px;
+    }
 
     &__subtitle {
-        font-family: "Roboto",
-            sans-serif;
+        font-family: "Roboto", sans-serif;
         font-weight: 400;
-        font-size: 14px;
-        line-height: 4.85714;
-        text-align: center;
+        font-size: 10px;
+        line-height: 6.8;
         color: $secondary-text-color;
-        margin-bottom: 13px;
+        margin-bottom: 10px;
+
+        @media screen and (min-width:1200px) {
+            font-size: 14px;
+            line-height: 4.85714;
+            text-align: center;
+            margin-bottom: 13px;
+        }
     }
 
     &__title {
-        font-family: "Oswald",
-            sans-serif;
-        font-weight: 400;
-        font-size: 48px;
-        line-height: 1.41667;
-        text-align: center;
-        color: $main-text-color;
-        margin-bottom: 17px;
+        display: none;
+
+        @media screen and (min-width:1200px) {
+            font-family: "Oswald",
+                sans-serif;
+            font-weight: 400;
+            font-size: 48px;
+            line-height: 1.41667;
+            text-align: center;
+            color: $main-text-color;
+            margin-bottom: 17px;
+        }
     }
 
     &__wrap {
         display: flex;
         flex-direction: column;
-        gap: 32px;
-        border: 1px solid $divider-color;
-        padding: 40px 20px;
+        gap: 18px;
         width: 100%;
         align-items: center;
 
         @media screen and (min-width:1200px) {
+            border: 1px solid $divider-color;
             flex-direction: row;
             gap: 108px;
             max-width: 1454px;
@@ -50,7 +62,7 @@
     &__form {
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 25px;
         width: 100%;
         max-width: 400px;
 
@@ -63,17 +75,21 @@
     }
 
     &__header {
-        font-family: "Oswald",
-            sans-serif;
-        text-align: center;
+        font-family: "Oswald", sans-serif;
         font-weight: 400;
-        font-size: 24px;
-        line-height: 2.83333;
-        color: $main-text-color;
-        margin-bottom: 12px;
+        font-size: 14px;
+        text-transform: uppercase;
+        color: #828282;
+        margin-bottom: 6px;
 
         @media screen and (min-width:1200px) {
-            text-align: left;
+            font-family: "Oswald",
+                sans-serif;
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 2.83333;
+            color: $main-text-color;
+            margin-bottom: 12px;
             margin-bottom: 28px;
         }
 
@@ -82,7 +98,7 @@
     &__labels {
         display: flex;
         flex-direction: column;
-        gap: 8px;
+        gap: 6px;
 
         @media screen and (min-width:1200px) {
             gap: 15px;
@@ -100,17 +116,16 @@
     }
 
     &__desc {
+        color: $inactive-color;
+        font-weight: 400;
+        font-size: 12px;
         font-family: "Roboto",
             sans-serif;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 1.25;
-        color: $inactive-color;
-        margin-bottom: 4px;
+        line-height: 1.66667;
 
         @media screen and (min-width:1200px) {
-            margin: 0;
             font-size: 16px;
+            line-height: 1.25;
         }
 
     }
@@ -122,7 +137,7 @@
     &__inputs {
         display: flex;
         flex-direction: column;
-        gap: 4px;
+        gap: 5px;
 
         @media screen and (min-width:1200px) {
             gap: 10px;
@@ -132,30 +147,30 @@
 
     &__input {
         width: 100%;
-        height: 28px;
-        padding: 0 8px;
+        height: 40px;
+        padding: 0 10px;
         border: 1px solid $divider-color;
         background-color: $bg-color;
-        font-family: "Roboto",
-            sans-serif;
-        font-weight: 400;
-        font-size: 13px;
-        line-height: 1.25;
         color: $main-text-color;
+        font-family: "Roboto", sans-serif;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.66667;
 
         @media screen and (min-width:1200px) {
             width: 392px;
             height: 44px;
             padding: 0 14px;
             font-size: 16px;
+            line-height: 1.25;
         }
 
         &::placeholder {
             font-family: "Roboto",
                 sans-serif;
             font-weight: 400;
-            font-size: 13px;
-            line-height: 1.25;
+            font-size: 12px;
+            line-height: 1.66667;
             color: $inactive-color;
 
             @media screen and (min-width:1200px) {
@@ -167,15 +182,14 @@
 
     &__select {
         width: 100%;
-        height: 28px;
-        padding: 0 8px;
+        height: 40px;
+        padding: 0 10px;
         border: 1px solid $divider-color;
         background-color: $bg-color;
-        font-family: "Roboto",
-            sans-serif;
+        font-family: "Roboto", sans-serif;
         font-weight: 400;
-        font-size: 13px;
-        line-height: 1.25;
+        font-size: 12px;
+        line-height: 1.66667;
         color: $secondary-text-color;
 
         @media screen and (min-width:1200px) {
@@ -188,16 +202,14 @@
     }
 
     &__btn {
-        font-family: "Oswald",
-            sans-serif;
+        font-family: "Oswald", sans-serif;
         font-weight: 500;
-        font-size: 14px;
+        font-size: 12px;
         letter-spacing: 0.04em;
         text-transform: uppercase;
-        text-align: center;
         color: $bg-color;
         width: 100%;
-        height: 40px;
+        height: 38px;
         background-color: $main-text-color;
 
         @media screen and (min-width:1200px) {
