--- a/src/pages/CabinetPage/CreateOrder/PaymentDetails/PaymentDetails.module.scss
+++ b/src/pages/CabinetPage/CreateOrder/PaymentDetails/PaymentDetails.module.scss
@@ -1,56 +1,52 @@
 @import "../../../../sass/utils/variables.scss";
+
 .payment {
-  &__wrap--main {
-    display: flex;
-    justify-content: center;
-    gap: 106px;
-    margin-top: 57px;
-  }
-  &__wrap {
-    width: 606px;
-  }
+  font-family: "Oswald", sans-serif;
   &__title {
     font-weight: 400;
-    font-size: 24px;
+    font-size: 14px;
     line-height: 283%;
-    color: $main-text-color;
+    text-transform: uppercase;
+    color: $secondary-text-color;
+    font-family: "Oswald", sans-serif;
   }
   &__text {
-    font-weight: 500;
-    font-size: 18px;
+    font-weight: 400;
+    font-size: 12px;
     line-height: 133%;
-    color: $secondary-text-color;
+    color: $main-text-color;
   }
   &__label {
+    font-size: 12px;
     font-weight: 400;
-    font-size: 14px;
     line-height: 143%;
     color: $secondary-text-color;
     display: flex;
     align-items: center;
     margin-top: 19px;
-    margin-left: 17px;
+    font-family: "Roboto Medium", sans-serif;
     input {
       margin-right: 12px;
     }
   }
-  &__subwrap {
-    margin-left: 42px;
-  }
   &__address,
   &__num {
+    font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 14px;
-    line-height: 164%;
+    line-height: 158%;
     color: $secondary-text-color;
     display: flex;
     width: 230px;
+  }
+  &__subwrap {
+    margin-left: 24px;
   }
   &__num {
     color: $link-color;
   }
   &__btns {
-    margin-top: 32px;
+    margin-top: 27px;
     display: flex;
     justify-content: space-between;
   }
@@ -62,7 +58,7 @@
     text-transform: uppercase;
     color: $contrast-text-color;
     background-color: $main-text-color;
-    padding: 15px 40px;
+    padding: 8px 29px;
     border: 1px solid $main-text-color;
     transition: all $st-transition;
   }
@@ -80,61 +76,121 @@
     color: $main-text-color;
   }
   &__label--discount {
-    margin-top: 4px;
+    margin-top: 10px;
     position: relative;
     input {
       width: 100%;
-      padding: 12px 16px;
+      padding: 10px 16px;
       font-weight: 400;
-      font-size: 16px;
-      line-height: 125%;
-    }
-    button {
-      font-weight: 500;
-      font-size: 14px;
-      letter-spacing: 0.04em;
-      text-transform: uppercase;
-      color: $inactive-color;
-      background-color: transparent;
-      position: absolute;
-      right: 17px;
-      top: 5px;
-      transition: all $st-transition;
+      font-size: 12px;
+      line-height: 167%;
     }
     button:hover {
       color: $main-text-color;
     }
   }
+  &__btn--tablet {
+    display: none;
+  }
+  &__btn--mobile {
+    position: absolute;
+    color: $secondary-text-color;
+    padding: 6px 20px;
+    background-color: $outline-color;
+    outline: 1px solid $secondary-text-color;
+    right: 8px;
+    bottom: -10px;
+  }
   &__list {
-    display: flex;
-    flex-direction: column;
-    gap: 18px;
+    display: none;
   }
-  &__item {
-    display: flex;
-    justify-content: space-between;
-  }
-  &__btn--change {
-    width: 24px;
-    height: 24px;
-    margin-top: 23px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: $functional-bg-color;
-    transition: all $st-transition;
-    img {
-      width: 11px;
-      height: 11px;
+}
+@media screen and (min-width: 768px) {
+  .payment {
+    &__wrap--main {
+      gap: 25px;
+      margin-top: 57px;
+    }
+    &__wrap {
+      width: 550px;
+    }
+    &__title {
+      font-size: 24px;
+      color: $main-text-color;
+    }
+    &__text {
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 133%;
+      color: $secondary-text-color;
+    }
+    &__label {
+      font-size: 14px;
+      margin-left: 17px;
+    }
+    &__subwrap {
+      margin-left: 42px;
+    }
+    &__btns {
+      margin-top: 32px;
+    }
+    &__btn--place,
+    &__btn--next {
+      padding: 15px 40px;
+    }
+    &__label--discount {
+      margin-top: 4px;
+      input {
+        padding: 12px 16px;
+        font-size: 16px;
+        line-height: 125%;
+      }
+      button {
+        font-weight: 500;
+        font-size: 14px;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+        color: $inactive-color;
+        background-color: transparent;
+        position: absolute;
+        right: 17px;
+        top: 0px;
+        transition: all $st-transition;
+      }
+      button:hover {
+        color: $main-text-color;
+      }
+    }
+    &__btn--tablet {
+      display: block;
+    }
+    &__btn--mobile {
+      display: none;
     }
   }
-  &__btn--change:hover {
-    background-color: $functional-bg-hover-color;
+}
+
+@media screen and (min-width: 1200px) {
+  .payment {
+    &__wrap--main {
+      display: flex;
+       margin: 0 auto;
+        margin-top: 57px;
+    }
+    &__list {
+      flex-direction: column;
+      gap: 18px;
+    }
   }
-  &__rate {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 164%;
-    color: $secondary-text-color;
+}
+
+@media screen and (min-width: 1920px) {
+  .payment {
+    &__wrap--main {
+      gap: 106px;
+    }
+    &__wrap {
+      width: 606px;
+    }
   }
 }
