--- a/src/pages/ProductPage/CardInfo.module.scss
+++ b/src/pages/ProductPage/CardInfo.module.scss
@@ -42,20 +42,30 @@
     font-weight: 500;
     line-height: 68px; /* 566.667% */
     text-transform: uppercase;
+    margin-right: 13px;
+    // margin-left: 259px;
 }
 
 .mainIconListBox{
      display: flex;
      outline: solid red 2px;
+     justify-content: center;
 }
 
 .mainIconList{
     display: flex;
+    gap: 13px;
+}
+
+.mainIconItem{
+    display: flex;
+    align-items: center;
 }
 
 .mainIconMedia{
     fill: #000;
 }
+
 
 .catalogeMainBox{
     outline: solid green 2px;
@@ -70,6 +80,20 @@
     font-weight: 400;
     line-height: 68px; /* 485.714% */
 }
+
+.fendiBox {
+    background: var(--Light-Blue-Hover, #F0F2F2);
+
+    width: 75px;
+    height: 35px;
+    flex-shrink: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
 
 .catalogeSubTitle {
     color: #000;
@@ -195,6 +219,8 @@
     text-transform: uppercase;
 
     width: 84px;
+    margin-right: 60px;
+    margin-bottom: 10px;
 }
 
 .quantityTextSub{
@@ -207,6 +233,59 @@
     text-transform: uppercase;
 
     width: 360px;
+}
+
+.euroWrap{
+    display: flex;
+}
+
+.euroText{
+    color: var(--Black, #000);
+    font-family: Oswald;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: uppercase;
+
+    margin-left: 24px;
+}
+
+.plusMinusBox{
+    display: flex;
+    align-items: center;
+
+    border: 1px solid var(--Divider, #C4C4C4);
+    background: #FFF;
+    width: 120px;
+    margin-bottom: 36px;
+}
+
+.plusMinusText{
+    color: #000;
+    text-align: center;
+    font-family: Oswald;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+
+    width: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.minusBoxIcon{
+    margin-left: 19px;
+    margin-right: 16px;
+}
+
+.plusBoxIcon{
+    // padding-top: 16px;
+    // padding-bottom: 15px;
+    margin-left: 16px;
+    margin-right: 19px;
 }
 
 .btnBox{
