--- a/src/pages/CatalogPage/Filtration/Filtration.scss
+++ b/src/pages/CatalogPage/Filtration/Filtration.scss
@@ -1,20 +1,99 @@
 @import '../../../sass/utils/mixins.scss';
 @import '../../../sass/utils/variables.scss';
 
+main{
+    display: flex;
+    flex-direction: column;
+}
+
+.catalog-filtration__phone-button {
+    background: none;
+    border: 1px solid $divider-color;
+    display: flex;
+    width: 60vw;
+    height: 40px;
+    @include typography(Oswald, 500, 14px, 40px, 0.5px, center);
+    padding-right: 10px;
+    padding-left: 10px;
+    justify-content: space-between;
+    align-items: center;
+    align-self: center;
+    margin-bottom: 20px;
+    transition: $st-transition;
+    @media screen and (min-width: 768px) {
+        display: none;
+
+    }
+
+    & img {
+        width: 15px;
+        height: 15px;
+    }
+
+    &.active{
+        background-color: $main-text-color;
+        color: $bg-color;
+    }
+    &.active img{
+        filter: invert(1);
+        transform: rotate(180deg);
+    }
+}
+
 .filtration {
-    width: 400px;
-    border-right: 1px solid $outline-color;
-    margin-top: 100px;
+    border: 1px solid $outline-color;
     position: relative;
     padding-right: 18px;
     padding-left: 21px;
+    flex-direction: column;
+    display: none;
+    width: 60%;
+    align-self: center;
+    height: 770px;
+    overflow-y: auto;
+    padding-bottom: 20px;
+    background-color: $bg-color;
+    top: 384px;
+    z-index: 1000;
+    transition: $st-transition;
+    
+    &.active {
+        display: flex;
+        margin-bottom: 20px;
+        position: absolute;
+    }
+
+    @media screen and (min-width: 768px) {
+        border-right: 1px solid $outline-color;
+        width: 400px;
+        display: flex;
+        align-self: start;
+        background: none;
+        position: static;
+        height: auto;
+        padding: 0;
+        top: 0;
+        z-index: 0;
+        padding-right: 0;
+        padding-left: 0;
+        padding-bottom: 0;
+        margin-bottom: 0;
+        &.active {
+            display: flex;
+            position: static;
+            margin-bottom: 0;
+            border: none;
+            
+            border-right: 1px solid $outline-color;
+        }
+
+    }
 }
 
 .catalog-way {
-    position: absolute;
-    top: -65px;
     @include typography(Roboto, 400, 14px, 4.85, 0, left);
     color: $secondary-text-color;
+    padding: 15px;
 }
 
 // .catalog-filtration__wrap {}
@@ -202,7 +281,8 @@
     text-align: right;
     @include typography(Roboto, 400, 14px, 3, 0, right);
 }
-.control-left-input{
+
+.control-left-input {
     text-align: left;
 
 }
@@ -230,7 +310,6 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 input[type=range]::-moz-range-thumb {
-    -webkit-appearance: none;
     pointer-events: all;
     width: 6px;
     height: 20px;
