--- a/src/pages/CatalogPage/Sorting/Sorting.scss
+++ b/src/pages/CatalogPage/Sorting/Sorting.scss
@@ -18,6 +18,10 @@
     &:hover {
         background-color: $main-hover-color;
     }
+    @media screen and (max-width: 768px) {
+        display: none;
+        
+    }
 }
 
 .sorting__select-sortBy {
